CHANGES
=======

* Adds more tests for api/application validators and fixed a potential path validator bug
* Fixes eslint issue for service.js
* Pep8 fixes
* Adds administration backend for artists
* Fixes print debug message
* Adds artist changes to route and tests
* adds rights for admins on artists route, also adds default sort to name field
* adds index to artists collection
* raises_maximum_item_retrieval
* Humongous update to 1.3.0 to have command line options
* Starts documenation, first documenation about testing
* Fixed typo in AngularJS
* Admin angular app uses new services.js
* Adds service.js containing rest repositories
* Moving js scripts around
* Adding eslint and travis npm for testing
* Linting admin.js / app.js
* Renames application to api
* Adds frontend logic to send a rescan for tracks
* Adds endpoint to send a rescan for tracks
* Adds streaming / partial sending
* Changes text field from name to search build for searching
* Ensures abspath for directories and also that they exist
* Adds future command line to switch between mongomock and real mongo for tests
* Corrects travis yaml
* Adds first part of a readme
* Adds travis configuration for CI
* Fixes testing and removes some print statements
* Fixes indexing
* Makes length parameter readonly
* Tests / mongomock fixing
* Extends route and tests to reflect logic in administration panel
* Adds parent directory path to track
* Tiny fixes
* First commit for admin backend
* Adds js for searching
* Adds static fonts for glyphicons
* Adds ensuring indices on tests and adds test for fulltext search
* Adding header and some js for searching
* Addings parents path to directories for easy traversing up the tree
* Pep8 fix
* Adds login view, possiblity to create a playlist
* Adds index creation utility
* Adds me registration route and more tests
* Adds some logic for me route
* Fixes tests and a little logic for the me endpoints
* Fixes tox ini to be used with python3
* Starts implementing a /me endpoint