@@ -1,6 +1,10 @@
 CHANGES
 =======
 
+* Pep8 fixes
+* Adds deletion of tracks from playlists, if an trak gets really deleted
+* Adds delete logic for users
+* Adds more tests
 * Adds more tests for api/application validators and fixed a potential path validator bug
 * Fixes eslint issue for service.js
 * Pep8 fixes
